--- a/index.html
+++ b/index.html
@@ -86,3 +86,83 @@
 
 </body>
 </html>
+<div class="spell-container">
+        <h2>Bestial Vitality</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/bestial_vitality_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Bestial Vitality">
+        <p><strong>Descrição:</strong> Recupera a saúde do usuário ao longo do tempo, aumentando a regeneração natural.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 12</p>
+        <p><strong>Tempo de Conjuração:</strong> 1 segundo</p>
+        <p><strong>Nível:</strong> 1 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Black Flame</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/black_flame_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Black Flame">
+        <p><strong>Descrição:</strong> Lança uma chama negra que causa dano de fogo ao longo do tempo aos inimigos atingidos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 16, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 1.8 segundos</p>
+        <p><strong>Nível:</strong> 2 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Black Flame Blade</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/black_flame_blade_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Black Flame Blade">
+        <p><strong>Descrição:</strong> Infunde a espada com chamas negras, aumentando o dano de ataque do usuário.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 16, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 1.5 segundos</p>
+        <p><strong>Nível:</strong> 3 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Blessed Weapon</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/blessed_weapon_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Blessed Weapon">
+        <p><strong>Descrição:</strong> Infunde a arma com bênçãos sagradas, aumentando o dano físico e a regeneração de saúde.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 16</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 2 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Blinding Bolt</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/blinding_bolt_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Blinding Bolt">
+        <p><strong>Descrição:</strong> Lança um raio ofuscante que cega e causa dano aos inimigos atingidos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 12, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 1 segundo</p>
+        <p><strong>Nível:</strong> 1 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Boiling Blood</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/boiling_blood_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Boiling Blood">
+        <p><strong>Descrição:</strong> Ferve o sangue do inimigo, causando dano contínuo ao longo do tempo.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 8</p>
+        <p><strong>Tempo de Conjuração:</strong> 1.5 segundos</p>
+        <p><strong>Nível:</strong> 2 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Braggart's Roar</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/braggarts_roar_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Braggart's Roar">
+        <p><strong>Descrição:</strong> Emite um rugido de desafio, aumentando o poder de ataque e defesa temporariamente.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 12</p>
+        <p><strong>Tempo de Conjuração:</strong> 1 segundo</p>
+        <p><strong>Nível:</strong> 2 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Carrion Phalanx</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/carrion_phalanx_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Carrion Phalanx">
+        <p><strong>Descrição:</strong> Invoca uma barreira de pedras mágicas que protege contra ataques inimigos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 20, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 3 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Carrion Greatsword</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/carrion_greatsword_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Carrion Greatsword">
+        <p><strong>Descrição:</strong> Conjura uma espada mágica gigante que corta os inimigos em linha reta.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 30, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 4 (Pode ser melhorada)</p>
+               </div>
