--- a/index.html
+++ b/index.html
@@ -166,3 +166,146 @@
         <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
         <p><strong>Nível:</strong> 4 (Pode ser melhorada)</p>
                </div>
+<div class="spell-container">
+        <h2>Cataclysm</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/cataclysm_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Cataclysm">
+        <p><strong>Descrição:</strong> Invoca uma explosão de poder mágico massivo, causando grande dano em área.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 40, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 3 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Comet</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/comet_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Comet">
+        <p><strong>Descrição:</strong> Lança uma cometa destruidor que causa grande dano ao atingir inimigos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 24, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 3 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Comet Azur</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/comet_azur_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Comet Azur">
+        <p><strong>Descrição:</strong> Lança uma poderosa cometa azul que atravessa os inimigos, causando dano massivo.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 60, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 3 segundos</p>
+        <p><strong>Nível:</strong> 6 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Cragblade</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/cragblade_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Cragblade">
+        <p><strong>Descrição:</strong> Cria uma lâmina de pedra afiada, aumentando o poder de ataque do usuário e causando dano de pedra.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 16, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 3 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Crystal Torrent</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/crystal_torrent_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Crystal Torrent">
+        <p><strong>Descrição:</strong> Lança uma rajada de cristais afiados, causando dano massivo em linha reta.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 50, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Cursed Bane</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/cursed_bane_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Cursed Bane">
+        <p><strong>Descrição:</strong> Conjura um feitiço maldito que enfraquece e causa dano contínuo aos inimigos ao longo do tempo.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 30</p>
+        <p><strong>Tempo de Conjuração:</strong> 1.5 segundos</p>
+        <p><strong>Nível:</strong> 4 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Dark Moon</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/dark_moon_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Dark Moon">
+        <p><strong>Descrição:</strong> Invoca uma lua negra que causa grande dano a inimigos e diminui a defesa deles.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 45, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 3 segundos</p>
+        <p><strong>Nível:</strong> 6 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Divine Storm</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/divine_storm_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Divine Storm">
+        <p><strong>Descrição:</strong> Invoca uma tempestade divina que causa dano sagrado e derruba inimigos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 40</p>
+        <p><strong>Tempo de Conjuração:</strong> 2.5 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Dragonfire</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/dragonfire_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Dragonfire">
+        <p><strong>Descrição:</strong> Lança um poderoso sopro de fogo de dragão que causa dano significativo em uma área ampla.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 25</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 4 (Pode ser melhorada)</p>
+    </div>
+    <div class="spell-container">
+        <h2>Ignite Burst</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/ignite_burst_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Ignite Burst">
+        <p><strong>Descrição:</strong> Lança uma explosão de chamas em um curto raio ao redor do usuário, causando danos massivos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 30, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 4 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Divine Light</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/divine_light_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Divine Light">
+        <p><strong>Descrição:</strong> Invoca uma luz divina que cura aliados em sua área de efeito e causa dano sagrado aos inimigos.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 40</p>
+        <p><strong>Tempo de Conjuração:</strong> 3 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Black Flame</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/black_flame_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Black Flame">
+        <p><strong>Descrição:</strong> Lança uma poderosa chama negra que queima inimigos com dano sagrado intenso.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 50</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 6 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Glintstone Icecrag</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/glintstone_icecrag_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Glintstone Icecrag">
+        <p><strong>Descrição:</strong> Conjura um bloco de gelo afiado de glintstone que é lançado contra inimigos causando dano em área ao impacto.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 40, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 2.5 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Wrath of the Flame</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/wrath_of_the_flame_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Wrath of the Flame">
+        <p><strong>Descrição:</strong> Invoca uma tempestade de chamas purificadoras que causam grande dano aos inimigos em sua área.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 50</p>
+        <p><strong>Tempo de Conjuração:</strong> 3 segundos</p>
+        <p><strong>Nível:</strong> 6 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Moonlight Wave</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/moonlight_wave_sorcery_elden_ring_wiki_guide_200px.png?raw=true" alt="Moonlight Wave">
+        <p><strong>Descrição:</strong> Lança uma onda de energia lunar que atravessa inimigos, causando dano massivo e reduzindo sua defesa.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 60, FÉ 0</p>
+        <p><strong>Tempo de Conjuração:</strong> 3.5 segundos</p>
+        <p><strong>Nível:</strong> 7 (Pode ser melhorada)</p>
+    </div>
+
+    <div class="spell-container">
+        <h2>Scorched Flame</h2>
+        <img src="https://github.com/malfeitora/SpellAndTree/blob/main/scorched_flame_incantation_elden_ring_wiki_guide_200px.png?raw=true" alt="Scorched Flame">
+        <p><strong>Descrição:</strong> Conjura uma rajada de fogo devastadora que atinge inimigos em linha reta com grande dano.</p>
+        <p class="attributes"><strong>Requisitos:</strong> INT 0, FÉ 40</p>
+        <p><strong>Tempo de Conjuração:</strong> 2 segundos</p>
+        <p><strong>Nível:</strong> 5 (Pode ser melhorada)</p>
+    </div>
+    
