--- a/index.html
+++ b/index.html
@@ -1,138 +1,179 @@
-<div class="spell">
-  <h2>Glintstone Pebble</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_pebble_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Pebble">
-  <p><strong>Requisitos:</strong> INT 10</p>
-  <p>Dispara um pequeno projétil de pedra reluzente que persegue o inimigo. Ideal para conjuradores iniciantes.</p>
-</div>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>SpellTree</title>
+  <style>
+    body {
+      background-color: #0d0d0d;
+      font-family: 'Georgia', serif;
+      color: #e0dede;
+      padding: 40px;
+      background-image: url('https://www.transparenttextures.com/patterns/dark-wood.png');
+    }
+    h1 {
+      text-align: center;
+      font-size: 3em;
+      color: #b8924d;
+      margin-bottom: 40px;
+      text-shadow: 0 0 10px #000;
+    }
+    .spell-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+    }
+    .spell-card {
+      background: #1a1a1a;
+      border: 2px solid #4a3b27;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 0 12px rgba(255, 235, 200, 0.1);
+    }
+    .spell-card img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    .spell-title {
+      font-size: 1.4em;
+      color: #d2b48c;
+      margin-bottom: 10px;
+    }
+    .spell-req {
+      font-style: italic;
+      color: #b0a084;
+    }
+    .spell-desc {
+      margin-top: 10px;
+      line-height: 1.4;
+    }
+  </style>
+</head>
+<body>
+  <h1>SpellTree</h1>
+  <div class="spell-grid">
+    <!-- Feitiço 1 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_pebble_elden_ring_wiki_guide_200px.png" alt="Glintstone Pebble">
+      <div class="spell-title">1. Glintstone Pebble</div>
+      <div class="spell-req">INT 10 | FÉ 0</div>
+      <div class="spell-desc">Lança um pequeno fragmento de magia glintstone. Feitiço básico e eficiente.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Stars</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_stars_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Stars">
-  <p><strong>Requisitos:</strong> INT 13</p>
-  <p>Evoca múltiplos fragmentos mágicos que perseguem o inimigo com precisão. Boa opção para combate à distância.</p>
-</div>
+    <!-- Feitiço 2 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_arc_elden_ring_wiki_guide_200px.png" alt="Glintstone Arc">
+      <div class="spell-title">2. Glintstone Arc</div>
+      <div class="spell-req">INT 13 | FÉ 0</div>
+      <div class="spell-desc">Projeta um arco mágico que atinge múltiplos inimigos.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Arc</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_arc_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Arc">
-  <p><strong>Requisitos:</strong> INT 13</p>
-  <p>Cria uma onda mágica em arco que atinge vários inimigos em linha. Excelente para limpar grupos fracos.</p>
-</div>
+    <!-- Feitiço 3 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/great_glintstone_shard_spell_elden_ring_wiki_guide_200px.png" alt="Great Glintstone Shard">
+      <div class="spell-title">3. Great Glintstone Shard</div>
+      <div class="spell-req">INT 16 | FÉ 0</div>
+      <div class="spell-desc">Dispara uma versão maior e mais poderosa do fragmento glintstone.</div>
+    </div>
 
-<div class="spell">
-  <h2>Great Glintstone Shard</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/great_glintstone_shard_sorcery_elden_ring_wiki_guide_200px.png" alt="Great Glintstone Shard">
-  <p><strong>Requisitos:</strong> INT 16</p>
-  <p>Lança um grande projétil mágico de alta velocidade. Mais poderoso que o Glintstone Pebble.</p>
-</div>
+    <!-- Feitiço 4 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_cometshard_spell_elden_ring_wiki_guide_200px.png" alt="Glintstone Cometshard">
+      <div class="spell-title">4. Glintstone Cometshard</div>
+      <div class="spell-req">INT 18 | FÉ 0</div>
+      <div class="spell-desc">Projeta um cometa mágico veloz que causa alto dano.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Cometshard</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_cometshard_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Cometshard">
-  <p><strong>Requisitos:</strong> INT 18</p>
-  <p>Projétil de cometa mágico que se move rapidamente e causa alto dano em linha reta.</p>
-</div>
+    <!-- Feitiço 5 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_spell_elden_ring_wiki_guide_200px.png" alt="Comet">
+      <div class="spell-title">5. Comet</div>
+      <div class="spell-req">INT 24 | FÉ 0</div>
+      <div class="spell-desc">Lança um cometa massivo com grande poder destrutivo.</div>
+    </div>
 
-<div class="spell">
-  <h2>Comet</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_sorcery_elden_ring_wiki_guide_200px.png" alt="Comet">
-  <p><strong>Requisitos:</strong> INT 24</p>
-  <p>Dispara um poderoso cometa mágico que perfura inimigos com precisão e dano elevado.</p>
-</div>
+    <!-- Feitiço 6 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/starlight_spell_elden_ring_wiki_guide_200px.png" alt="Starlight">
+      <div class="spell-title">6. Starlight</div>
+      <div class="spell-req">INT 15 | FÉ 0</div>
+      <div class="spell-desc">Evoca uma luz mágica para iluminar os arredores.</div>
+    </div>
 
-<div class="spell">
-  <h2>Comet Azur</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_azur_sorcery_elden_ring_wiki_guide_200px.png" alt="Comet Azur">
-  <p><strong>Requisitos:</strong> INT 60</p>
-  <p>Canaliza um raio mágico contínuo devastador. Uma das magias mais poderosas, mas exige muito preparo.</p>
-</div>
+    <!-- Feitiço 7 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/starlight_shards_elden_ring_wiki_guide_200px.png" alt="Stars of Ruin">
+      <div class="spell-title">7. Stars of Ruin</div>
+      <div class="spell-req">INT 43 | FÉ 0</div>
+      <div class="spell-desc">Dispara uma rajada de estrelas perseguidoras. Muito difícil de evitar.</div>
+    </div>
 
-<div class="spell">
-  <h2>Shard Spiral</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/shard_spiral_sorcery_elden_ring_wiki_guide_200px.png" alt="Shard Spiral">
-  <p><strong>Requisitos:</strong> INT 21</p>
-  <p>Dispara projéteis mágicos em espiral que perfuram múltiplos inimigos, causando dano prolongado.</p>
-</div>
+    <!-- Feitiço 8 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/shard_spiral_spell_elden_ring_wiki_guide_200px.png" alt="Shard Spiral">
+      <div class="spell-title">8. Shard Spiral</div>
+      <div class="spell-req">INT 27 | FÉ 0</div>
+      <div class="spell-desc">Lança fragmentos mágicos que perfuram o inimigo em espiral.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Icecrag</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_icecrag_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Icecrag">
-  <p><strong>Requisitos:</strong> INT 15</p>
-  <p>Projétil de gelo mágico que causa dano e acúmulo de congelamento. Originário de Sellia.</p>
-</div>
+    <!-- Feitiço 9 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_barrage_spell_elden_ring_wiki_guide_200px.png" alt="Crystal Barrage">
+      <div class="spell-title">9. Crystal Barrage</div>
+      <div class="spell-req">INT 23 | FÉ 0</div>
+      <div class="spell-desc">Lança uma rajada rápida de cristais mágicos.</div>
+    </div>
 
-<div class="spell">
-  <h2>Freezing Mist</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/freezing_mist_sorcery_elden_ring_wiki_guide_200px.png" alt="Freezing Mist">
-  <p><strong>Requisitos:</strong> INT 21</p>
-  <p>Evoca uma névoa congelante que reduz a temperatura e causa congelamento em inimigos próximos.</p>
-</div>
-<div class="spell">
-  <h2>Glintstone Pebble</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_pebble_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Pebble">
-  <p><strong>Requisitos:</strong> INT 10</p>
-  <p>Dispara um pequeno projétil de pedra reluzente que persegue o inimigo. Ideal para conjuradores iniciantes.</p>
-</div>
+    <!-- Feitiço 10 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_release_spell_elden_ring_wiki_guide_200px.png" alt="Crystal Release">
+      <div class="spell-title">10. Crystal Release</div>
+      <div class="spell-req">INT 28 | FÉ 0</div>
+      <div class="spell-desc">Libera uma explosão de cristais ao redor do conjurador.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Stars</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_stars_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Stars">
-  <p><strong>Requisitos:</strong> INT 13</p>
-  <p>Evoca múltiplos fragmentos mágicos que perseguem o inimigo com precisão. Boa opção para combate à distância.</p>
-</div>
+    <!-- Feitiço 11 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_azur_spell_elden_ring_wiki_guide_200px.png" alt="Comet Azur">
+      <div class="spell-title">11. Comet Azur</div>
+      <div class="spell-req">INT 60 | FÉ 0</div>
+      <div class="spell-desc">Lança um gigantesco feixe de energia mágica em linha reta.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Arc</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_arc_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Arc">
-  <p><strong>Requisitos:</strong> INT 13</p>
-  <p>Cria uma onda mágica em arco que atinge vários inimigos em linha. Excelente para limpar grupos fracos.</p>
-</div>
+    <!-- Feitiço 12 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/stars_of_ruin_spell_elden_ring_wiki_guide_200px.png" alt="Founding Rain of Stars">
+      <div class="spell-title">12. Founding Rain of Stars</div>
+      <div class="spell-req">INT 52 | FÉ 0</div>
+      <div class="spell-desc">Convoca uma chuva estelar devastadora sobre os inimigos.</div>
+    </div>
 
-<div class="spell">
-  <h2>Great Glintstone Shard</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/great_glintstone_shard_sorcery_elden_ring_wiki_guide_200px.png" alt="Great Glintstone Shard">
-  <p><strong>Requisitos:</strong> INT 16</p>
-  <p>Lança um grande projétil mágico de alta velocidade. Mais poderoso que o Glintstone Pebble.</p>
-</div>
+    <!-- Feitiço 13 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/rojalos_greatsword_spell_elden_ring_wiki_guide_200px.png" alt="Loretta's Greatbow">
+      <div class="spell-title">13. Loretta's Greatbow</div>
+      <div class="spell-req">INT 26 | FÉ 0</div>
+      <div class="spell-desc">Evoca um grande arco mágico para lançar uma flecha poderosa.</div>
+    </div>
 
-<div class="spell">
-  <h2>Glintstone Cometshard</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_cometshard_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Cometshard">
-  <p><strong>Requisitos:</strong> INT 18</p>
-  <p>Projétil de cometa mágico que se move rapidamente e causa alto dano em linha reta.</p>
-</div>
+    <!-- Feitiço 14 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/lorettas_mastery_spell_elden_ring_wiki_guide_200px.png" alt="Loretta's Mastery">
+      <div class="spell-title">14. Loretta's Mastery</div>
+      <div class="spell-req">INT 46 | FÉ 0</div>
+      <div class="spell-desc">Dispara várias flechas mágicas ao mesmo tempo com extrema precisão.</div>
+    </div>
 
-<div class="spell">
-  <h2>Comet</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_sorcery_elden_ring_wiki_guide_200px.png" alt="Comet">
-  <p><strong>Requisitos:</strong> INT 24</p>
-  <p>Dispara um poderoso cometa mágico que perfura inimigos com precisão e dano elevado.</p>
-</div>
+    <!-- Feitiço 15 -->
+    <div class="spell-card">
+      <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/carina_piercer_spell_elden_ring_wiki_guide_200px.png" alt="Carian Piercer">
+      <div class="spell-title">15. Carian Piercer</div>
+      <div class="spell-req">INT 27 | FÉ 0</div>
+      <div class="spell-desc">Cria uma lâmina mágica perfurante com velocidade letal.</div>
+    </div>
 
-<div class="spell">
-  <h2>Comet Azur</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/comet_azur_sorcery_elden_ring_wiki_guide_200px.png" alt="Comet Azur">
-  <p><strong>Requisitos:</strong> INT 60</p>
-  <p>Canaliza um raio mágico contínuo devastador. Uma das magias mais poderosas, mas exige muito preparo.</p>
-</div>
-
-<div class="spell">
-  <h2>Shard Spiral</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/shard_spiral_sorcery_elden_ring_wiki_guide_200px.png" alt="Shard Spiral">
-  <p><strong>Requisitos:</strong> INT 21</p>
-  <p>Dispara projéteis mágicos em espiral que perfuram múltiplos inimigos, causando dano prolongado.</p>
-</div>
-
-<div class="spell">
-  <h2>Glintstone Icecrag</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_icecrag_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Icecrag">
-  <p><strong>Requisitos:</strong> INT 15</p>
-  <p>Projétil de gelo mágico que causa dano e acúmulo de congelamento. Originário de Sellia.</p>
-</div>
-
-<div class="spell">
-  <h2>Freezing Mist</h2>
-  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/freezing_mist_sorcery_elden_ring_wiki_guide_200px.png" alt="Freezing Mist">
-  <p><strong>Requisitos:</strong> INT 21</p>
-  <p>Evoca uma névoa congelante que reduz a temperatura e causa congelamento em inimigos próximos.</p>
-</div>
+  </div>
+</body>
+</html>
